# Game_Server_A3

./: CMakeLists.txt  README.txt  fsm.h  server.c
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/ca/bcit/rps_app/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/ca/bcit/rps_app/: MainActivity.kt  Packet.kt  TCPSocketHandler.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/ca/bcit/rps_app/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
client/: client.py  rps.py  ttt.py
client/rps_android/: MainActivity.kt  Packet.kt  TCPSocketHandler.kt
fsm/: fsm.c
games/: rps.c  rps.h  ttt.c  ttt.h
